# DevServerManager

./: .env.dist  .env.example  .gitignore  .pylintrc  CHANGELOG.md  CLEAN_RELEASE_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISTRIBUTION_GUIDE.md  GITHUB_RELEASE_SUMMARY.md  INDEX.md  LIVE_UPDATE_README.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_TEMPLATE.md  SECURE_CONFIGURATION_v2.1.3.md  SECURITY.md  SECURITY_BADGE.md  SECURITY_IMPLEMENTATION_SUMMARY_ID.md  UPGRADE_LOG.md  VERSION_MIGRATION.md  backup_config.py  build_executable.py  build_release_v2.1.2.py  build_secure_distribution.py  create_release.bat  create_release_improved.bat  create_release_v2.1.2.bat  launch_gui.bat  main.py  prepare_release.py  pyproject.toml  requirements.txt  setup.py  simple_build.py  test_backup_functionality.py  test_live_update.py  verify_security.py
.github/workflows/: build-and-release.yml  build-release.yml
config/: update_cache.json
docs/: BACKUP_IMPORT_GUIDE.md  LIVE_UPDATE.md  LIVE_UPDATE_README.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
release/: PANDUAN_PENGGUNAAN.txt  RELEASE_NOTES_v2.1.0.md  server_config_example.json
release-v1.0.0/: CHANGELOG.md  PANDUAN_PENGGUNAAN.txt
release-v1.0.1/: CHANGELOG.md  PANDUAN_PENGGUNAAN.txt  README.md
release-v2.1.0/: INSTALL.md  PANDUAN_PENGGUNAAN.txt  build_executable.py  setup.py
release-v2.1.0/config/: server_config.json  update_cache.json
release-v2.1.0/docs/: CONFIGURATION.md  DEVELOPER.md  SECURITY.md
release-v2.1.0/src/gui/: __init__.py  dialogs.py  widgets.py
release-v2.1.0/src/models/: __init__.py  server_config.py
release-v2.1.0/src/services/: download_manager.py  template_manager.py  update_checker.py  update_installer.py
release-v2.1.0/utils/: __init__.py  file_utils.py  logger.py  theme_manager.py
release-vv2.1.0/: PANDUAN_PENGGUNAAN.txt  server_templates.json
scripts/: create_release.py
src/: __init__.py
src/gui/: __init__.py  base.py  dialogs.py  main_window.py  splashscreen.py  widgets.py
src/services/: __init__.py  build_config.py  config_manager.py  download_manager.py  env_manager.py  server_manager.py  template_manager.py  update_checker.py
utils/: icon_manager.py  logger.py  theme_manager.py
windows-release/DevServerManager/: ANTIVIRUS_FALSE_POSITIVE_SOLUTION.md  CHANGELOG.md  LICENSE  README-WINDOWS.txt  README.md  Start-DevServerManager.bat
